--- a/dj-events-backend/api/events/models/events.settings.json
+++ b/dj-events-backend/api/events/models/events.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "events",
   "info": {
-    "name": "events"
+    "name": "events",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -30,7 +31,7 @@
     "time": {
       "type": "string"
     },
-    "performes": {
+    "performers": {
       "type": "string"
     },
     "description": {
