--- a/dj-events-front/package.json
+++ b/dj-events-front/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-github-calendar": "^3.1.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-toastify": "^8.0.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
