--- a/dj-events-backend/package.json
+++ b/dj-events-backend/package.json
@@ -25,7 +25,7 @@
     "strapi-plugin-users-permissions": "3.6.8",
     "strapi-provider-email-nodemailer-v3": "^1.0.2",
     "strapi-provider-upload-cloudinary": "^3.6.8",
-    "strapi-utils": "3.6.8"
+    "strapi-utils": "^3.6.8"
   },
   "author": {
     "name": "A Strapi developer"
